[package]
authors = ["Blake Oliver <oliver22213@me.com>"]
edition = "2018"
name = "nrs"
version = "0.1.0"
[dependencies]
serde_json = "1.0.48"
tokio-rustls = "0.12.2"
# tokio-util = "0.3.1"

[dependencies.tokio]
features = ["rt-core", "tcp", "time", "macros", "sync", "stream"]
version = "0.2"
# tokio = { version = "0.2", features = ["rt-core", "tcp", "time", "macros", "sync", "stream"] }
# Hopefully can use tokio-tls when the pem cert bug fix lands via work on native-tls.
# Until then...
# tokio-tls = "0.3"
# native-tls = "0.2"

[dependencies.tokio-util]
version = "0.3"
features = ["codec"]
