[package]
authors = ["Blake Oliver <oliver22213@me.com>"]
edition = "2018"
name = "nrs"
version = "0.1.0"
[dependencies]
futures = "0.3"
serde_json = "1.0.48"
tokio-rustls = "0.14"

[dependencies.tokio]
features = ["rt-core", "tcp", "time", "macros", "sync", "stream"]
version = "0.2"

[dependencies.tokio-util]
features = ["codec"]
version = "0.3"
# Hopefully can use tokio-tls when the pem cert bug fix lands via work on native-tls.
# Until then...
# tokio-tls = "0.3"
# native-tls = "0.2"